--- a/商业计划书.md
+++ b/商业计划书.md
@@ -29,8 +29,10 @@
 ## 二、应用分析/项目背景
 ### 功能介绍
 智能拔罐器的功能包括压力控制，温度控制，图像采集等。
-通过手机蓝牙控制改变罐内气压和通过温度改变装置，可以自行调节气压，选择自己适合的气压和温度。
-同时可以在拔罐结束后，通过罐体内的摄像头拍照，将图片信息上传到手机端，进行信息储存和分析，通过图象分析，会把个人身体健康程度反馈给用户，并推荐最好的温度和气压。
+通过手机蓝牙无线控制，调节罐内温度与气压。
+同时可以在拔罐结束后，通过罐体内的摄像头拍照，将图片信息上传到手机端，进行信息储存和图像分析，把个人身体健康状况反馈给用户，并推荐最合适的温度和气压。  
+软件的主要功能为提供引导。
+
 ### 产品对比
 与目前的火罐和气罐相比。。。。。。
 ### 应用
@@ -45,9 +47,9 @@
 ## 四、团队建设
 ### 公司简介
 #### 公司性质
-1. 股本结构注册资本：人民币500万元  
-   创业团队入股：人民币100万元  
-   风险投资商入股：人民币400万元
+1. 股本结构注册资本：人民币xxx万元  
+   创业团队入股：人民币xxx万元  
+   风险投资商入股：人民币xxx万元
 2. 公司战略  
    通过SWOT分析，我们对公司产品的内部优势、内部弱点，以及外部机会和外部威胁进行了科学的分析，并据此制定了公司的经营发展目标与公司主要战略。公司在发展的不同时期拥有不一样的发展战略。  
    前期公司主要实行差异化战略，产品主要输出给医院、学校、美容院，以此节约宣传产品的成本，并能够快速打响产品的口碑，使我们公司快速积累资金，积累第一批用户，改进拔罐器，完善线上功能和服务。  
