--- a/商业计划书.md
+++ b/商业计划书.md
@@ -2,13 +2,13 @@
 
 ## 一、项目简介
 ### 环境背景
-近年来，中医药更频繁地走进了人们的生活——一方面，中医药在治疗慢性病等疾病中疗效显著；另一方面，随着经济的快速发展，人民生活水平不断提高，无论老少，都开始更多地注重养生。而拔火罐则是中医治疗以及养生的重要组成部分。
+近年来，中医药更频繁地走进了人们的生活——一方面，中医药在治疗慢性病等疾病中疗效显著，具有无可比拟的优势；另一方面，随着经济的快速发展，人民生活水平不断提高，无论老少，都开始更多地重视养生。而拔火罐则是中医治疗以及养生的重要组成部分。
 ### 拔罐治疗
-拔罐具有通经活络、行气活血、消肿止痛、祛风散寒等作用。其适用范围较为广泛，在临床上和生活中发挥着预防保健、治疗疾病的作用。在应用拔罐治疗的最初期时，它是用来辅助治疗疮疡疾病的。随着医学的不断进步，现代临床发现，拔罐还可以辅助治疗肺结核、风湿病、感冒、咳嗽等内科疾病，以及颈椎病、腰肌劳损、肩周炎、落枕、腰椎间盘突出症等骨关节疾病。生活中，有规律的定期拔罐还可以达到提高身体免疫力，缓解疲劳，增强机体抗病能力的保健作用。此外，如丹毒、红丝疗、毒蛇咬伤、疮疡初起未溃等外科疾病亦可用拔罐法。
+拔罐具有通经活络、行气活血、消肿止痛、祛风散寒等作用。其适用范围较为广泛，在临床上和生活中发挥着预防保健、治疗疾病的作用。在应用拔罐治疗的最初期时，它是用来辅助治疗疮疡疾病的。随着医学的不断进步，现代临床发现，拔罐还可以辅助治疗肺结核、风湿病、感冒、咳嗽等内科疾病，以及颈椎病、腰肌劳损、肩周炎、落枕、腰椎间盘突出症等骨关节疾病。生活中，有规律的定期拔罐还可以达到提高身体免疫力，缓解疲劳，增强机体抗病能力的保健作用。此外，如丹毒、红丝疗、毒蛇咬伤、疮疡初起未溃等外科疾病的治疗亦可采用拔罐法。
 ### 反思与改进
-现有传统拔罐器主要为火罐、抽气罐两种。从临床及实践看来，这两种拔罐器均有值得改进之处：火罐存在安全隐患，拔罐力度不易控制；抽气管虽操作便捷，但缺乏温热刺激，疗效欠佳。  
+现有传统拔罐器主要为火罐、抽气罐两种。从临床及实践看来，这两种拔罐器均有值得改进之处：火罐存在安全隐患，拔罐力度不易控制；抽气罐虽操作便捷，但缺乏温热刺激，疗效欠佳。  
 基于传统拔罐器，我们去劣取优，研发出智能拔罐器，并在传统拔罐器基础上增加了新的功能，如动态调节气压、与手机实现互联、智能温控等。以此智能拔罐器为载体，我们还开发了平台APP，提供线上服务，例如对拔罐图像结合自身身体健康状况进行数据图像分析，在线咨询医生，遵医嘱购买处方药，私人定制拔罐疗法等。  
-推广销售智能拔罐器，使我们在获取利润的同时，满足更多人的养生需求，能使中医文化更好地传播。
+（推广销售智能拔罐器，使我们在获取利润的同时，满足更多人的养生需求，能使中医文化更好地传播。）
 ### 产品介绍
 我们公司的职能拔罐器具有技术先进、功能多样等优点。其主要特色如下：  
 1. 罐体采用分罐式设计，即分为上部的控制器和下部的罐体。一个控制器可控制所有型号下部罐体，能有效节约成本和材料。
@@ -34,7 +34,8 @@
 软件的主要功能为提供引导。
 
 ### 产品对比
-与目前的火罐和气罐相比。。。。。。
+与目前的火罐和气罐相比，我们的智能拔罐器在功能与安全性能上具有充分的优势，如可以量化地调节温度、压力、时间，使得操作更为简易、安全；罐体内部摄像头实时观察，收集数据，预防不良反应的发生；
+智能拔罐器不仅仅是一款拔罐工具，配合软件平台的应用，它更是一款私人化的健康指导专家，如：针对不同的不适症状，指导选择不同的拔罐穴位；通过云平台分析拔罐后留下的罐印，得到人体的健康数据并进行指导……
 ### 应用
 我们产品的应用分为三个时期，前中后三个时期：
 1. 前期：在医院、医学院等机构进行试运用，同时采集样本数据，建立数据库，作为教学资源的同时与医院、医学院共同合作，完成数据分析。
